--- a/css/materialize.css
+++ b/css/materialize.css
@@ -9060,6 +9060,12 @@ input[type=range]::-ms-thumb {
   padding: 0 20px;
 }
 
+#error_save {
+   width: 30%;
+   
+}
+
+
 /* Media Queries */
 @media only screen and (min-width: 601px) {
   .timepicker-modal {
